# exhibitA

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .swiftformat  .swiftlint.yml  CLAUDE.md  README.md  litestream.yml  pyproject.toml  requirements.txt  ruff.toml  start.sh
.claude/commands/: optimize-skill.md  save-memory.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: admin-smoke.yml  api-sync-contract.yml  backend-quality.yml  content-validation.yml  db-schema-check.yml  full-stack-smoke.yml  ios-assets-theme-check.yml  ios-build-and-test.yml  pr-governance.yml  push-mock-integration.yml  release-readiness.yml  workflow-health-report.yml
ExhibitA/: .swiftformat  .swiftlint.yml  ExhibitA copy-Info.plist
ExhibitA/Config/: Debug.xcconfig.example  Release.xcconfig.example
ExhibitA/ExhibitA/: Info.plist
ExhibitA/ExhibitA.xcodeproj/: project.pbxproj
app/: __init__.py  __main__.py  apns.py  auth.py  config.py  db.py  models.py
app/routes/: __init__.py  admin.py  comments.py  content.py  devices.py  filings.py  signatures.py
app/static/: admin.css
app/templates/: base.html  content_form.html  content_list.html  dashboard.html  login.html
deploy/caddy/: exhibita.Caddyfile
deploy/systemd/: exhibit-a.service
docs/: PHASES.md  client-proposal.md  exhibit-A-contract.md  exhibit-a-design-doc.md  index.html  romantic-dark-mode-design-review.md  romantic-dark-mode-preview.html
docs/PH-0/: 0-1-backend-scaffold-schema.md  0-2-content-signature-sync-api.md  0-3-auth-deployment-resilience.md
docs/PH-1/: 1-1-admin-routes-session-apns.md  1-2-content-templates-admin-styling.md
docs/PH-2/: 2-1-xcode-scaffold-build-config.md  2-2-design-system-tokens-paper-noise.md  2-3-appstate-router-navigation-shell.md  2-4-api-client-keychain-content-cache.md  2-5-shared-foundation-ui-components.md
docs/PH-3/: 3-1-home-screen-filing-cabinet-navigation.md
docs/PH-4/: 4-1-letter-list-correspondence-log.md  4-2-letter-detail-markdown-reader.md
docs/PH-5/: 5-1-sealed-thoughts-list-view.md  5-2-sealed-thought-detail-view.md
docs/PH-6/: 6-1-contract-book-page-curl-cover-toc.md  6-2-contract-article-pagination-engine.md  6-3-signature-block-pencilkit-signing-flow.md  6-4-final-page-contract-sequence-integration.md
docs/PH-7/: 7-1-sync-engine-bg-refresh-push-handling.md  (+1 more)
scripts/: check-em-dashes.sh  protocol-zero.sh  run-hooks.sh  seed_contracts.py
tests/: test_admin.py  test_api.py
(+117 files in other folders)
